Add production-ready examples for OpenAI integration with PyContract validation (SECURITY FIX: Remove leaked API key)
- Introduced PRODUCTION_EXAMPLES.md to provide comprehensive real-world examples of using PyContract-style contracts with the OpenAI API.
- Implemented production_ready_example.py and real_world_openai_example.py to demonstrate various scenarios including customer support, content generation, and batch processing with parameter validation and security checks.
- Enhanced the PyContractFactory to support new contract types and validation mechanisms.
- Updated existing contract validation logic to include basic parameter validation for types like float, int, str, and bool.
- Improved overall documentation and usage tracking for better insights into API interactions and costs.
- Added comprehensive security guidelines and .env.example for proper API key management.
- SECURITY FIX: Removed accidentally committed OpenAI API key and implemented proper environment variable usage.

--- a/.gitignore
+++ b/.gitignore
@@ -136,5 +136,20 @@ Thumbs.db
 # Project specific
 *.key
 *.pem
+*.secret
 .env.local
 .env.production
+
+# API Keys and secrets (SECURITY)
+openai_key.txt
+api_keys.txt
+sk-*
+*.api_key
+credentials.json
+secrets.json
+
+# Temporary files that might contain keys
+*.tmp
+*.temp
+temp/
+tmp/
